// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  // output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
  

}
generator dbml {
  provider = "prisma-dbml-generator"
}

// --- ENUMS ---

enum IntegrationProvider {
  GOOGLE
  GITHUB
  SLACK

  @@map("integration_provider")
}

enum IntegrationStatus {
  ACTIVE
  EXPIRED
  REVOKED
  ERROR

  @@map("integration_status")
}

enum TaskStatus {
  INBOX       // Chờ duyệt từ Webhook hoặc Fetch API
  PENDING
  IN_PROGRESS
  DONE
  ARCHIVED

  @@map("task_status")
}

enum TaskPriority {
  LOW
  MEDIUM
  HIGH
  URGENT

  @@map("task_priority")
}

enum TaskSource {
  MANUAL
  GMAIL
  GITHUB
  SLACK

  @@map("task_source")
}

enum ActivityType {
  CREATED
  UPDATED_STATUS
  COMMENTED
  AUTO_SYNCED

  @@map("activity_type")
}

enum SyncResource {
  GMAIL_INBOX
  GITHUB_ISSUES
  GITHUB_PULL_REQUESTS

  @@map("sync_resource")
}

enum TaskType {
  TODO
  SCHEDULED

  @@map("task_type")
}

enum NotifSource {
  TASK
  EVENT

  @@map("notif_source")
}

enum NotifType {
  EMAIL_REMINDER
  SYSTEM_ALERT
  TASK_REMINDER    // Nhắc nhở trước deadline
  TASK_DUE         // Đúng lúc deadline
  TASK_START       // Đúng lúc bắt đầu
  EVENT_START      // Sự kiện bắt đầu
  EVENT_END        // Sự kiện kết thúc
  EVENT_REMINDER   // Nhắc trước sự kiện

  @@map("notif_type")
}

enum NotifStatus {
  PENDING
  SENT
  FAILED

  @@map("notif_status")
}

enum EventRepeat {
  NONE
  DAILY
  WEEKLY
  MONTHLY
  YEARLY

  @@map("event_repeat")
}

enum EventReminder {
  NONE
  MINUTES_5
  MINUTES_15
  HOUR_1

  @@map("event_reminder")
}

// --- MODELS ---

/// Người dùng hệ thống
model User {
  id                String    @id @default(uuid()) // Đổi Int -> String, dùng hàm uuid()
  email             String    @unique
  role              UserRole  @default(USER)
  passwordHash      String?   @map("password_hash")
  refreshTokenHash  String?   @map("refresh_token_hash") @db.Text
  fullName          String?   @map("full_name")
  avatarUrl         String?   @map("avatar_url")
  bio               String?   @db.Text @map("bio")
  theme             String?   @map("theme")
  language          String?   @map("language")
  timeFormat        String?   @map("time_format")
  timezone          String?   @map("timezone")

  isActive          Boolean   @default(true) @map("is_active")
  createdAt         DateTime  @default(now()) @map("created_at")
  updatedAt         DateTime  @default(now()) @updatedAt @map("updated_at")
  deletedAt         DateTime? @map("deleted_at")

  // Relations (Không thay đổi tên, chỉ thay đổi kiểu dữ liệu bên dưới)
  accounts      Account[] //MỚI: Các phương thức đăng nhập (Google, GitHub login)
  integrations  Integration[] //CŨ: Các kết nối để lấy dữ liệu (Gmail Sync)
  workspaces    Workspace[]
  tasks         Task[]
  events         Event[]
  tags           Tag[]
  taskActivities TaskActivity[]
  syncLogs       SyncLog[]
  notifications  Notification[]
  notificationPreference NotificationPreference?
  auditLogs      AuditLog[]

  @@map("users")
}
enum UserRole{
  USER
  ADMIN
  @@map("user_role")
}

// Trả lời câu hỏi: User này được login bằng Google ID nào?
model Account {
  id                String   @id @default(uuid())
  userId            String   @map("user_id")
  type              String   // "oauth" (Google/Github) hoặc "credentials" (Local)
  provider          String   // "google", "github"
  providerAccountId String   @map("provider_account_id") // ID của user bên Google/GitHub
  
  // Các field này chỉ để lưu tạm session login nếu cần, KHÔNG DÙNG ĐỂ SYNC DATA
  refreshToken      String?  @db.Text @map("refresh_token")
  accessToken       String?  @db.Text @map("access_token")
  expiresAt         Int?     @map("expires_at")
  
  createdAt         DateTime @default(now()) @map("created_at")
  updatedAt         DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId]) // 1 tài khoản Google chỉ thuộc về 1 User
  @@map("accounts")
}

model Integration {
  id                    String              @id @default(uuid())
  userId                String              @map("user_id") // Int -> String
  provider              IntegrationProvider
  providerUserId        String              @map("provider_user_id")
  
  accessTokenEncrypted  String              @map("access_token_encrypted") @db.Text
  refreshTokenEncrypted String?             @map("refresh_token_encrypted") @db.Text
  expiresAt             DateTime?           @map("expires_at")
  
  profileData           Json?               @map("profile_data")
  webhookData           Json?               @map("webhook_data") // Lưu thông tin webhook (Gmail Watch expiration, GitHub hook IDs, etc.)
  status                IntegrationStatus   @default(ACTIVE)
  
  createdAt             DateTime            @default(now()) @map("created_at")
  updatedAt             DateTime            @default(now()) @updatedAt @map("updated_at")

  user     User      @relation(fields: [userId], references: [id])
  syncLogs SyncLog[]

  @@unique([userId, provider])
  @@unique([provider, providerUserId])
  @@map("integrations")
}

model Task {
  id             String       @id @default(uuid())
  userId         String       @map("user_id")
  
  title          String
  description    String?      @db.Text
  status         TaskStatus   @default(PENDING)
  priority       TaskPriority @default(MEDIUM)
  
  // v2: Task type — TODO (chỉ dueDate) | SCHEDULED (có startAt + endAt)
  type           TaskType     @default(TODO)
  
  // Legacy fields — giữ để backward compat, alias: startAt=scheduledAt, endAt=dueDate
  dueDate        DateTime?    @map("due_date")
  reminderAt     DateTime?    @map("reminder_at")
  completedAt    DateTime?    @map("completed_at")
  scheduledAt    DateTime?
  sourceType     TaskSource   @default(MANUAL) @map("source_type")
  sourceId       String?      @map("source_id")
  sourceLink     String?      @map("source_link")
  sourceMetadata Json?        @map("source_metadata")
  isConverted    Boolean      @default(false) @map("is_converted")
  
  createdAt      DateTime     @default(now()) @map("created_at")
  updatedAt      DateTime     @default(now()) @updatedAt @map("updated_at")
  deletedAt      DateTime?    @map("deleted_at")

  user            User           @relation(fields: [userId], references: [id])
  taskTags        TaskTag[]
  activities      TaskActivity[]
  notifications   Notification[]
  linkedEvents    Event[]        // Events dẫn xuất từ task này

  // Hỗ trợ Todoist-like subtasks (nested tree)
  parentId        String?        @map("parent_id")
  parent          Task?          @relation("TaskToTask", fields: [parentId], references: [id], onDelete: Cascade)
  subtasks        Task[]         @relation("TaskToTask")

  // Workspace
  workspaceId     String?        @map("workspace_id")
  workspace       Workspace?     @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([status])
  @@index([type])
  @@index([userId, dueDate])
  @@index([userId, scheduledAt])
  @@index([parentId])
  @@index([workspaceId])
  @@map("tasks")
}

model Event {
  id           String        @id @default(uuid())
  userId       String        @map("user_id")

  title        String

  // Legacy fields — giữ để backward compat
  date         DateTime      @db.Date
  time         String
  endDate      DateTime?     @map("end_date") @db.Date
  endTime      String?       @map("end_time")
  color        String        @default("#3b82f6")
  location     String?
  description  String?       @db.Text
  repeat       EventRepeat   @default(NONE)
  reminder     EventReminder @default(NONE)

  // v2: Timestamp đầy đủ cho scheduler
  startAt      DateTime?     @map("start_at")      // Thời điểm bắt đầu sự kiện
  endAt        DateTime?     @map("end_at")        // Thời điểm kết thúc sự kiện
  reminderAt   DateTime?     @map("reminder_at")  // Thời điểm nhắc nhở
  
  // v2: Link tới Task nếu Event này dẫn xuất từ Task SCHEDULED
  // Rule: linkedTaskId != null → Event Scheduler SKIP, Task Scheduler chịu trách nhiệm
  linkedTaskId String?       @map("linked_task_id")

  createdAt    DateTime      @default(now()) @map("created_at")
  updatedAt    DateTime      @default(now()) @updatedAt @map("updated_at")

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  linkedTask   Task?         @relation(fields: [linkedTaskId], references: [id], onDelete: SetNull)

  @@index([userId, date])
  @@index([userId, startAt])
  @@index([linkedTaskId])
  @@map("events")
}

model Tag {
  id        String   @id @default(uuid())
  userId    String   @map("user_id") // Int -> String
  name      String
  colorHex  String?  @default("#808080") @map("color_hex")
  createdAt DateTime @default(now()) @map("created_at")

  user     User      @relation(fields: [userId], references: [id])
  taskTags TaskTag[]

  @@unique([userId, name])
  @@map("tags")
}

model TaskTag {
  taskId String @map("task_id") // Int -> String
  tagId  String @map("tag_id")  // Int -> String

  task Task @relation(fields: [taskId], references: [id], onDelete: Cascade)
  tag  Tag  @relation(fields: [tagId], references: [id], onDelete: Cascade)

  @@id([taskId, tagId])
  @@map("task_tags")
}

model TaskActivity {
  id        String       @id @default(uuid())
  taskId    String       @map("task_id") // Int -> String
  userId    String?      @map("user_id") // Int -> String
  
  type      ActivityType
  oldValue  Json?        @map("old_value")
  newValue  Json?        @map("new_value")
  createdAt DateTime     @default(now()) @map("created_at")

  task Task  @relation(fields: [taskId], references: [id], onDelete: Cascade)
  user User? @relation(fields: [userId], references: [id])

  @@map("task_activities")
}

model SyncLog {
  id            String       @id @default(uuid())
  userId        String       @map("user_id") // Int -> String
  integrationId String       @map("integration_id") // Int -> String
  
  resourceType  SyncResource @map("resource_type")
  lastSyncedAt  DateTime     @map("last_synced_at")
  
  nextPageToken String?      @map("next_page_token")
  syncCursor    String?      @map("sync_cursor")
  
  status        String
  itemsProcessed Int         @default(0) @map("items_processed")
  errorMessage  String?      @map("error_message") @db.Text
  
  createdAt     DateTime     @default(now()) @map("created_at")

  user        User        @relation(fields: [userId], references: [id])
  integration Integration @relation(fields: [integrationId], references: [id])

  @@map("sync_logs")
}

model Notification {
  id          String       @id @default(uuid())
  userId      String       @map("user_id")
  
  // v2: source + sourceId thay thế taskId cứng nhắc
  source      NotifSource? // TASK | EVENT (nullable để backward compat)
  sourceId    String?      @map("source_id")   // ID của task hoặc event
  
  // Legacy — giữ để không gãy code cũ
  taskId      String?      @map("task_id")
  
  type        NotifType
  title       String?
  content     String?      @db.Text
  
  // notifKey v2 format: "notif:{source}:{sourceId}:{type}"
  // notifKey v1 format (legacy): "task:{id}:{phase}:{offset}"
  notifKey    String?      @unique @map("notif_key")
  
  scheduledAt DateTime     @map("scheduled_at")
  sentAt      DateTime?    @map("sent_at")
  status      NotifStatus  @default(PENDING)
  retryCount  Int          @default(0) @map("retry_count")
  isRead      Boolean      @default(false) @map("is_read")
  
  createdAt   DateTime     @default(now()) @map("created_at")

  user User  @relation(fields: [userId], references: [id])
  task Task? @relation(fields: [taskId], references: [id])

  @@index([userId, isRead])
  @@index([status, scheduledAt])
  @@index([source, sourceId, type, createdAt])
  @@map("notifications")
}

model AuditLog {
  id          String   @id @default(uuid())
  userId      String?  @map("user_id") // Int -> String
  action      String
  entityTable String?  @map("entity_table")
  entityId    String?  @map("entity_id") // Quan trọng: entity_id cũng phải đổi sang String để lưu UUID
  ipAddress   String?  @map("ip_address")
  userAgent   String?  @map("user_agent")
  createdAt   DateTime @default(now()) @map("created_at")

  user User? @relation(fields: [userId], references: [id])

  @@map("audit_logs")
}

model NotificationPreference {
  userId String @id @map("user_id")
  email  Boolean @default(true)
  push   Boolean @default(true)
  sound  Boolean @default(false)
  digest Boolean @default(true)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("notification_preferences")
}

model Workspace {
  id          String   @id @default(uuid())
  userId      String   @map("user_id")
  name        String
  description String?  @db.Text
  color       String?
  icon        String?
  
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @default(now()) @updatedAt @map("updated_at")

  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tasks       Task[]

  @@index([userId])
  @@map("workspaces")
}