//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  role UserRole [not null, default: 'USER']
  passwordHash String
  refreshTokenHash String
  fullName String
  avatarUrl String
  bio String
  theme String
  language String
  timeFormat String
  timezone String
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  accounts accounts [not null]
  integrations integrations [not null]
  workspaces workspaces [not null]
  tasks tasks [not null]
  events events [not null]
  tags tags [not null]
  taskActivities task_activities [not null]
  syncLogs sync_logs [not null]
  notifications notifications [not null]
  notificationPreference notification_preferences
  auditLogs audit_logs [not null]

  Note: 'Người dùng hệ thống'
}

Table accounts {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refreshToken String
  accessToken String
  expiresAt Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table integrations {
  id String [pk]
  userId String [not null]
  provider IntegrationProvider [not null]
  providerUserId String [not null]
  accessTokenEncrypted String [not null]
  refreshTokenEncrypted String
  expiresAt DateTime
  profileData Json
  webhookData Json
  status IntegrationStatus [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  user users [not null]
  syncLogs sync_logs [not null]

  indexes {
    (userId, provider) [unique]
    (provider, providerUserId) [unique]
  }
}

Table tasks {
  id String [pk]
  userId String [not null]
  title String [not null]
  description String
  status TaskStatus [not null, default: 'PENDING']
  priority TaskPriority [not null, default: 'MEDIUM']
  type TaskType [not null, default: 'TODO']
  dueDate DateTime
  reminderAt DateTime
  completedAt DateTime
  scheduledAt DateTime
  sourceType TaskSource [not null, default: 'MANUAL']
  sourceId String
  sourceLink String
  sourceMetadata Json
  isConverted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  user users [not null]
  taskTags task_tags [not null]
  activities task_activities [not null]
  notifications notifications [not null]
  linkedEvents events [not null]
  parentId String
  parent tasks
  subtasks tasks [not null]
  workspaceId String
  workspace workspaces
}

Table events {
  id String [pk]
  userId String [not null]
  title String [not null]
  date DateTime [not null]
  time String [not null]
  endDate DateTime
  endTime String
  color String [not null, default: '#3b82f6']
  location String
  description String
  repeat EventRepeat [not null, default: 'NONE']
  reminder EventReminder [not null, default: 'NONE']
  startAt DateTime
  endAt DateTime
  reminderAt DateTime
  linkedTaskId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  user users [not null]
  linkedTask tasks
}

Table tags {
  id String [pk]
  userId String [not null]
  name String [not null]
  colorHex String [default: '#808080']
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
  taskTags task_tags [not null]

  indexes {
    (userId, name) [unique]
  }
}

Table task_tags {
  taskId String [not null]
  tagId String [not null]
  task tasks [not null]
  tag tags [not null]

  indexes {
    (taskId, tagId) [pk]
  }
}

Table task_activities {
  id String [pk]
  taskId String [not null]
  userId String
  type ActivityType [not null]
  oldValue Json
  newValue Json
  createdAt DateTime [default: `now()`, not null]
  task tasks [not null]
  user users
}

Table sync_logs {
  id String [pk]
  userId String [not null]
  integrationId String [not null]
  resourceType SyncResource [not null]
  lastSyncedAt DateTime [not null]
  nextPageToken String
  syncCursor String
  status String [not null]
  itemsProcessed Int [not null, default: 0]
  errorMessage String
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
  integration integrations [not null]
}

Table notifications {
  id String [pk]
  userId String [not null]
  source NotifSource
  sourceId String
  taskId String
  type NotifType [not null]
  title String
  content String
  notifKey String [unique]
  scheduledAt DateTime [not null]
  sentAt DateTime
  status NotifStatus [not null, default: 'PENDING']
  retryCount Int [not null, default: 0]
  isRead Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
  task tasks
}

Table audit_logs {
  id String [pk]
  userId String
  action String [not null]
  entityTable String
  entityId String
  ipAddress String
  userAgent String
  createdAt DateTime [default: `now()`, not null]
  user users
}

Table notification_preferences {
  userId String [pk]
  email Boolean [not null, default: true]
  push Boolean [not null, default: true]
  sound Boolean [not null, default: false]
  digest Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  user users [not null]
}

Table workspaces {
  id String [pk]
  userId String [not null]
  name String [not null]
  description String
  color String
  icon String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  user users [not null]
  tasks tasks [not null]
}

Enum IntegrationProvider {
  GOOGLE
  GITHUB
  SLACK
}

Enum IntegrationStatus {
  ACTIVE
  EXPIRED
  REVOKED
  ERROR
}

Enum TaskStatus {
  INBOX
  PENDING
  IN_PROGRESS
  DONE
  ARCHIVED
}

Enum TaskPriority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

Enum TaskSource {
  MANUAL
  GMAIL
  GITHUB
  SLACK
}

Enum ActivityType {
  CREATED
  UPDATED_STATUS
  COMMENTED
  AUTO_SYNCED
}

Enum SyncResource {
  GMAIL_INBOX
  GITHUB_ISSUES
  GITHUB_PULL_REQUESTS
}

Enum TaskType {
  TODO
  SCHEDULED
}

Enum NotifSource {
  TASK
  EVENT
}

Enum NotifType {
  EMAIL_REMINDER
  SYSTEM_ALERT
  TASK_REMINDER
  TASK_DUE
  TASK_START
  EVENT_START
  EVENT_END
  EVENT_REMINDER
}

Enum NotifStatus {
  PENDING
  SENT
  FAILED
}

Enum EventRepeat {
  NONE
  DAILY
  WEEKLY
  MONTHLY
  YEARLY
}

Enum EventReminder {
  NONE
  MINUTES_5
  MINUTES_15
  HOUR_1
}

Enum UserRole {
  USER
  ADMIN
}

Ref: accounts.userId > users.id [delete: Cascade]

Ref: integrations.userId > users.id

Ref: tasks.userId > users.id

Ref: tasks.parentId - tasks.id [delete: Cascade]

Ref: tasks.workspaceId > workspaces.id [delete: Cascade]

Ref: events.userId > users.id [delete: Cascade]

Ref: events.linkedTaskId > tasks.id [delete: Set Null]

Ref: tags.userId > users.id

Ref: task_tags.taskId > tasks.id [delete: Cascade]

Ref: task_tags.tagId > tags.id [delete: Cascade]

Ref: task_activities.taskId > tasks.id [delete: Cascade]

Ref: task_activities.userId > users.id

Ref: sync_logs.userId > users.id

Ref: sync_logs.integrationId > integrations.id

Ref: notifications.userId > users.id

Ref: notifications.taskId > tasks.id

Ref: audit_logs.userId > users.id

Ref: notification_preferences.userId - users.id [delete: Cascade]

Ref: workspaces.userId > users.id [delete: Cascade]